Remove style-jsx

--- a/templates/react-mst-app/.stylelintrc
+++ b/templates/react-mst-app/.stylelintrc
@@ -1,23 +1,25 @@
 {
-  "extends": [
-    "stylelint-config-standard"
+  "processors": [
+    [
+      "stylelint-processor-styled-components",
+      {
+        "ignoreFiles": ["**/*.less"]
+      }
+    ]
   ],
+  "extends": ["stylelint-config-recommended", "stylelint-config-styled-components"],
   "rules": {
     "string-quotes": "single",
     "property-no-unknown": [
       true,
       {
-        "ignoreProperties": [
-          "composes"
-        ]
+        "ignoreProperties": ["composes"]
       }
     ],
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": [
-          "global"
-        ]
+        "ignorePseudoClasses": ["global"]
       }
     ],
     "selector-pseudo-element-colon-notation": null,
@@ -28,13 +30,13 @@
     "no-eol-whitespace": [
       true,
       {
-        ignore: ["empty-lines"]
+        "ignore": ["empty-lines"]
       }
     ],
     "max-empty-lines": [
       1,
       {
-        ignore: ["comments"]
+        "ignore": ["comments"]
       }
     ],
     "no-missing-end-of-source-newline": null,
@@ -42,6 +44,8 @@
     "color-hex-length": null,
     "block-no-empty": null,
     "declaration-colon-newline-after": null,
-    "value-list-comma-newline-after": null
+    "value-list-comma-newline-after": null,
+    "declaration-empty-line-before": null,
+    "property-no-vendor-prefix": null
   }
 }
