--- a/templates/react-mst-app/tsconfig.json
+++ b/templates/react-mst-app/tsconfig.json
@@ -17,7 +17,13 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "allowJs": true
+    "allowJs": true,
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin",
+        "validate": false
+      }
+    ]
   },
   "exclude": [
     "node_modules",
