--- a/templates/react-mst/tsconfig.json
+++ b/templates/react-mst/tsconfig.json
@@ -22,7 +22,13 @@
     "paths": {
       "@/*": ["./src/*"],
       "@config/*": ["./config/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin",
+        "validate": false
+      }
+    ]
   },
   "exclude": [
     "node_modules",
