--- a/templates/react-mst-app/package.json
+++ b/templates/react-mst-app/package.json
@@ -52,6 +52,7 @@
     "@types/react-addons-css-transition-group": "^15.0.1",
     "@types/react-dom": "^0.14.23",
     "@types/rx": "^4.1.1",
+    "@types/styled-components": "^4.1.17",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.1",
@@ -87,7 +88,6 @@
     "less-loader": "^4.0.4",
     "mini-css-extract-plugin": "0.4.1",
     "multer": "^1.3.0",
-    "node-sass": "^4.7.2",
     "nodemon": "1.12.5",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
@@ -101,16 +101,15 @@
     "prettier-eslint": "^8.8.1",
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.6.0",
-    "puppeteer": "^1.7.0",
+    "puppeteer-core": "^1.18.1",
     "react-hot-loader": "^3.1.2",
     "redux-devtools": "^3.3.2",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
-    "styled-jsx": "^2.2.6",
-    "styled-jsx-plugin-postcss": "^0.1.3",
-    "styled-jsx-plugin-sass": "^0.2.4",
+    "styled-components": "^4.3.2",
     "stylelint": "^9.2.1",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-recommended": "^2.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.8.0",
     "stylus-loader": "^1.4.2",
     "svg-sprite-loader": "^0.3.1",
     "tcp-port-used": "^1.0.0",
@@ -125,7 +124,6 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
-    "antd": "^3.7.3",
     "antd-mobile": "^2.2.5",
     "array-from": "^2.1.1",
     "axios": "^0.18.0",
@@ -145,6 +143,7 @@
     "mobx": "^4.3.1",
     "mobx-react": "^5.2.3",
     "mobx-state-tree": "^3.0.2",
+    "moment": "^2.24.0",
     "nornj": "^0.4.13",
     "nornj-loader": "^0.4.2",
     "nornj-react": "^0.4.5",
