--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -11,9 +11,9 @@
     "mock": "nodemon ./mock/app.js",
     "lint": "eslint src",
     "stylelint": "stylelint src/**/*.css src/**/*.less src/**/*.scss",
-    "test": "jest --config=test/jest.config.json",
-    "coverage": "jest --coverage --config=test/jest.config.json",
-    "test:e2e": "jest --config=test/jest.config.e2e.json",
+    "test": "jest --config=test/jest.config.js",
+    "coverage": "jest --coverage --config=test/jest.config.js",
+    "test:e2e": "jest --config=test/jest.config.e2e.js",
     "e2e": "node ./test/run-e2e.js"
   },
   "repository": {
@@ -55,6 +55,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@types/classnames": "^2.2.9",
     "@types/echarts": "^4.1.6",
     "@types/enzyme": "^3.9.4",
     "@types/jest": "^24.0.15",
@@ -73,6 +74,7 @@
     "babel-plugin-nornj-in-jsx": "^5.0.0-rc.27",
     "babel-plugin-nornj-loader": "^1.0.13",
     "body-parser": "^1.17.2",
+    "chrome-paths": "^1.0.1",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^3.1.4",
@@ -113,14 +115,13 @@
     "prettier-eslint": "^9.0.0",
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.6.0",
-    "puppeteer": "^1.18.1",
+    "puppeteer-core": "^1.18.1",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.2",
-    "styled-jsx": "^2.2.6",
-    "styled-jsx-plugin-less": "^0.0.1-alpha.1",
-    "styled-jsx-plugin-postcss": "^0.1.3",
     "stylelint": "^9.2.1",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-recommended": "^2.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.8.0",
     "tcp-port-used": "^1.0.0",
     "typescript": "^3.5.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
@@ -135,6 +136,7 @@
     "antd": "^3.19.2",
     "array-from": "^2.1.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "console-polyfill": "^0.3.0",
     "echarts": "^4.1.0",
     "echarts-for-react": "^2.0.15-beta.0",
@@ -147,6 +149,7 @@
     "mobx-react": "^6.1.1",
     "mobx-react-lite": "^1.4.0",
     "mobx-state-tree": "^3.14.0",
+    "moment": "^2.24.0",
     "nornj": "^5.0.0-rc.17",
     "nornj-loader": "^5.0.0-rc.2",
     "nornj-react": "^5.0.0-rc.13",
