--- a/templates/react-mst/.eslintrc
+++ b/templates/react-mst/.eslintrc
@@ -58,6 +58,7 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-explicit-any": 0,
     "react/jsx-curly-spacing": 0,
     "react/jsx-indent-props": 0,
     "react/jsx-indent": [1, 2],
