--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -58,6 +58,7 @@
     "@types/classnames": "^2.2.9",
     "@types/echarts": "^4.1.6",
     "@types/enzyme": "^3.9.4",
+    "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.133",
     "@types/puppeteer": "^1.12.4",
