--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -64,6 +64,8 @@
     "@types/puppeteer": "^1.12.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.16",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
