--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "javascript.suggestionActions.enabled": false,
   "typescript.suggestionActions.enabled": false,
+  "window.zoomLevel": 1
 }
