--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
   "author": "Joe_Sky <hitomi_doax@sina.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-typescript": "^7.3.3",
     "chalk": "^1.1.3",
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
@@ -48,8 +52,9 @@
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mv": "^2.1.1",
-    "nornj": "^5.0.0-rc.17",
+    "nornj": "^5.0.0-rc.19",
     "ora": "^1.3.0",
+    "prettier-eslint": "^9.0.0",
     "process.args": "0.0.6",
     "rimraf": "^2.6.3",
     "targz": "^1.0.1",
@@ -64,7 +69,6 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "prettier": "^1.13.7",
-    "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
     "prettier-stylelint": "^0.4.2",
     "stylelint": "^9.2.1",
