--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-cli",
-  "version": "0.5.0-beta.6",
+  "version": "0.5.0",
   "description": "The CLI for scaffolding NornJ template projects, and do more things",
   "bin": {
     "nj": "bin/nj"
@@ -52,7 +52,7 @@
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mv": "^2.1.1",
-    "nornj": "^5.0.0-rc.48",
+    "nornj": "^5.0.0",
     "ora": "^1.3.0",
     "prettier-eslint": "^9.0.0",
     "process.args": "0.0.6",
